--- a/PirateDefence/Plugins/NxCodeUI/NxCodeUI.uplugin
+++ b/PirateDefence/Plugins/NxCodeUI/NxCodeUI.uplugin
@@ -4,7 +4,7 @@
 	"VersionName": "1.0",
 	"FriendlyName": "NxCodeUI",
 	"Description": "",
-	"Category": "Other",
+	"Category": "Nx",
 	"CreatedBy": "",
 	"CreatedByURL": "",
 	"DocsURL": "",
