--- a/PirateDefence/Plugins/NxCodeBase/NxCodeBase.uplugin
+++ b/PirateDefence/Plugins/NxCodeBase/NxCodeBase.uplugin
@@ -4,7 +4,7 @@
 	"VersionName": "1.0",
 	"FriendlyName": "NxCodeBase",
 	"Description": "",
-	"Category": "Other",
+	"Category": "Nx",
 	"CreatedBy": "",
 	"CreatedByURL": "",
 	"DocsURL": "",
@@ -28,17 +28,17 @@
 		{
 			"Name": "NxCodeBaseEditor",
 			"Type" : "Editor",
-			"LoadingPhase" : "PostEngineInit",
+			"LoadingPhase" : "PostEngineInit"
 		}
 	],
 	"Plugins": [
 		{
 			"Name": "GeometryProcessing",
-				"Enabled" : true
+			"Enabled" : true
 		},
 		{
 			"Name": "ProceduralMeshComponent",
 			"Enabled" : true
-		},
+		}
 	]
 }
