--- a/PirateDefence/Config/DefaultEngine.ini
+++ b/PirateDefence/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Maps/StartMap/L_StartMap.L_StartMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -7,8 +7,8 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameInstanceClass=/Script/NxCodeBase.NxGameInstanceBase
+GameDefaultMap=/NxCodeBase/Patcher/L_PatcherTemplate.L_PatcherTemplate
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/NxPirateDefence.NxPirateDefenceGameMode
 GlobalDefaultServerGameMode=None
