--- a/PirateDefence/Config/DefaultPlugin.ini
+++ b/PirateDefence/Config/DefaultPlugin.ini
@@ -8,3 +8,17 @@ StartupLoadingSettings=(MinimumLoadingScreenDisplayTime=-1.000000,bAutoCompleteW
 [/Script/NxLoadingUserWidget.NxLoadingUserWidgetSettings]
 WidgetLoadingSettings=(LoadingWidget="/NxCodeMode/LoadingUserWidget/W_LoadingUserWidgetTemplate.W_LoadingUserWidgetTemplate_C",LoadingZOrder=10000,HoldLoadingAdditionalSecs=2.000000,LoadingHeartbeatHangDuration=0.000000,LogLoadingHeartbeatInterval=5.000000,LogLoadingReasonEveryFrame=False,ForceLoadingVisible=False,HoldLoadingAdditionalSecsEvenInEditor=False,ForceTickCustomLoadingEvenInEditor=True)
 
+[/Script/NxCodePatcher.NxPatchSettings]
+PatchEnable=False
+PatchTryCount=5
+DeployType=Local
+FILE_SERVER_VERSION=ServerVersion.txt
+MANIFEST_SERVER=ServerManifest
+MANIFEST_CACHED_SERVER=CachedServerManifest.json
+MANIFEST_LOCAL=LocalManifest.json
+MANIFEST_EMBEDDED=EmbeddedManifest.json
+PatchPath=((Dev, (CdnVersionUrls="127.0.0.1:8088/CDN//Dev",CdnDataUrls=("127.0.0.1:8088/CDN//Dev/Data"))),(Live, (CdnVersionUrls="https://pirateDefence.s3.amazonaws.com/CDN",CdnDataUrls=("https://pirateDefence.s3.amazonaws.com/CDN/Data"))))
+WidgetClass=/NxCodeBase/Patcher/W_PatcherWidgetTemplate.W_PatcherWidgetTemplate_C
+WidgetMenuEnable=False
+NextMapAfterPatching=/Game/Maps/StartMap/L_StartMap.L_StartMap
+
